@@ -38,36 +38,8 @@ using System.ServiceModel.Security.Tokens;
 
 using ReqType = System.ServiceModel.Security.Tokens.ServiceModelSecurityTokenRequirement;
 
-namespace System.ServiceModel.Channels
+namespace System.ServiceModel.Channels.Security
 {
-	internal class SupportingTokenInfo
-	{
-		public SupportingTokenInfo (SecurityToken token,
-			SecurityTokenAttachmentMode mode,
-			bool isOptional)
-		{
-			Token = token;
-			Mode = mode;
-			IsOptional = isOptional;
-		}
-
-		public SecurityToken Token;
-		public SecurityTokenAttachmentMode Mode;
-		public bool IsOptional;
-		public EncryptedData Encrypted;
-	}
-
-	internal class SupportingTokenInfoCollection : Collection<SupportingTokenInfo>
-	{
-		protected override void InsertItem (int index, SupportingTokenInfo item)
-		{
-			foreach (SupportingTokenInfo i in this)
-				if (i.Token.GetType () == item.Token.GetType ())
-					throw new ArgumentException (String.Format ("Supporting tokens do not allow multiple SecurityTokens of the same type: {0}", i.Token.GetType ()));
-			base.InsertItem (index, item);
-		}
-	}
-
 	internal abstract class MessageSecurityBindingSupport
 	{
 		SecurityTokenManager manager;
@@ -470,136 +442,6 @@ namespace System.ServiceModel.Channels
 			r.Properties [ReqType.MessageDirectionProperty] = MessageDirection.Input;
 			InitializeRequirement (p, r);
 			return SecurityTokenManager.CreateSecurityTokenAuthenticator (r, out resolver);
-		}
-	}
-
-	internal abstract class SecurityCapabilities
-		: ISecurityCapabilities
-	{
-		public abstract SecurityBindingElement Element { get; }
-
-		public abstract bool AllowSerializedSigningTokenOnReply { get; }
-
-		public abstract MessageProtectionOrder MessageProtectionOrder { get; }
-
-		public abstract SecurityTokenParameters InitiatorParameters { get; }
-
-		public abstract SecurityTokenParameters RecipientParameters { get; }
-
-		public abstract bool RequireSignatureConfirmation { get; }
-
-		public abstract string DefaultKeyWrapAlgorithm { get; }
-
-		public abstract string DefaultSignatureAlgorithm { get; }
-
-
-		// ISecurityCapabilities
-		// FIXME: implement correctly
-		public ProtectionLevel SupportedRequestProtectionLevel {
-			get { return ProtectionLevel.EncryptAndSign; }
-		}
-
-		public ProtectionLevel SupportedResponseProtectionLevel {
-			get { return ProtectionLevel.EncryptAndSign; }
-		}
-
-		public bool SupportsClientAuthentication {
-			get { return InitiatorParameters != null ? InitiatorParameters.InternalSupportsClientAuthentication : false; }
-		}
-
-		public bool SupportsClientWindowsIdentity {
-			get { return InitiatorParameters != null ? InitiatorParameters.InternalSupportsClientWindowsIdentity : false; }
-		}
-
-		public bool SupportsServerAuthentication {
-			get { return RecipientParameters != null ? RecipientParameters.InternalSupportsServerAuthentication : false; }
-		}
-	}
-
-	internal class SymmetricSecurityCapabilities : SecurityCapabilities
-	{
-		SymmetricSecurityBindingElement element;
-
-		public SymmetricSecurityCapabilities (
-			SymmetricSecurityBindingElement element)
-		{
-			this.element = element;
-		}
-
-		public override SecurityBindingElement Element {
-			get { return element; }
-		}
-
-		// FIXME: const true or false
-		public override bool AllowSerializedSigningTokenOnReply {
-			get { throw new NotImplementedException (); }
-		}
-
-		public override MessageProtectionOrder MessageProtectionOrder {
-			get { return element.MessageProtectionOrder; }
-		}
-
-		public override SecurityTokenParameters InitiatorParameters {
-			get { return element.ProtectionTokenParameters; }
-		}
-
-		public override SecurityTokenParameters RecipientParameters {
-			get { return element.ProtectionTokenParameters; }
-		}
-
-		public override bool RequireSignatureConfirmation {
-			get { return element.RequireSignatureConfirmation; }
-		}
-
-		public override string DefaultSignatureAlgorithm {
-			get { return element.DefaultAlgorithmSuite.DefaultSymmetricSignatureAlgorithm; }
-		}
-
-		public override string DefaultKeyWrapAlgorithm {
-			get { return element.DefaultAlgorithmSuite.DefaultSymmetricKeyWrapAlgorithm; }
-		}
-	}
-
-	internal class AsymmetricSecurityCapabilities : SecurityCapabilities
-	{
-		AsymmetricSecurityBindingElement element;
-
-		public AsymmetricSecurityCapabilities (
-			AsymmetricSecurityBindingElement element)
-		{
-			this.element = element;
-		}
-
-		public override bool AllowSerializedSigningTokenOnReply {
-			get { return element.AllowSerializedSigningTokenOnReply; }
-		}
-
-		public override SecurityBindingElement Element {
-			get { return element; }
-		}
-
-		public override MessageProtectionOrder MessageProtectionOrder {
-			get { return element.MessageProtectionOrder; }
-		}
-
-		public override SecurityTokenParameters InitiatorParameters {
-			get { return element.InitiatorTokenParameters; }
-		}
-
-		public override SecurityTokenParameters RecipientParameters {
-			get { return element.RecipientTokenParameters; }
-		}
-
-		public override bool RequireSignatureConfirmation {
-			get { return element.RequireSignatureConfirmation; }
-		}
-
-		public override string DefaultSignatureAlgorithm {
-			get { return element.DefaultAlgorithmSuite.DefaultAsymmetricSignatureAlgorithm; }
-		}
-
-		public override string DefaultKeyWrapAlgorithm {
-			get { return element.DefaultAlgorithmSuite.DefaultAsymmetricKeyWrapAlgorithm; }
 		}
 	}
 }
